# AntialiasingMeasurement

./: .gitignore  CMakeLists.txt  Reunanpehmennystekniikoiden vaikutus ja mittaus-MarkusLaurila2025.docx
header/: CornerDetector.h  ImageCapture.h  ModelImporter.h  OverLay.h  Shader.h  SkyBox.h  TextureManager.h
include/glfw-3.4/: CMakeLists.txt
include/imgui-1.91.9b/: CMakeLists.txt
shader/: screenQuad.vert  shader.frag  shader.vert  shaderAntiAliasing.frag  skyBox.vert
source/: CornerDetector.cpp  Display.cpp  ImageCapture.cpp  ModelImporter.cpp  OverLay.cpp  Shader.cpp  SkyBox.cpp  TextureManager.cpp  main.cpp
src/: Display.cpp  ImageCapture.cpp  Shader.cpp  main.cpp  object_data.cpp
